--- a/website.html
+++ b/website.html
@@ -8,37 +8,35 @@
 </head>
 <body>
   
-  <div class="block">
-    <h1>CG's <font color="red">LONG NGUYEN</font> Csc344 "Programming Languages" Work Site</h1>
+  <div class="main-body">
+    <h1>CG's <font color="black">LONG NGUYEN</font> Csc344 "Programming Languages" Work Site</h1>
     <p>
       <hr>
-      <i><font color="red"><b>LONG NGUYEN</b> </font> - Intended for suggestive instructional purposes only. </i>
+      <i><font color="black"><b>LONG NGUYEN</b> </font> - Intended for suggestive instructional purposes only. </i>
   </div>
     
-  <div class="block">
+  <div class="section">
     <h2>About this page</h2>
     <p>
       This page presents documents pertaining to my work in the Programming Languages course at Oswego. Some of the documents represent work on <b>programming assignments</b>, code and demos. Some of the documents represent work on <b>problem sets</b>, including language description exercises and essays pertaining to programming languages. The work is presented chronologically with respect to due dates, and is clearly identified by means of metatext and hypertext. 
     </p>
   </div>
   
-  <div class="block">
+  <div class="section">
     <h2>Programming Assignments and Problem Sets</h2>
     <p>
       <ul>
 	<li>Csc344 Web Work Site Assignment:
-	  <!--
-	  &lt;&lt;specification&gt;&gt;
-	  <li>Racket Programming Assignment #1: First Interactions: 
-	  &lt;&lt;specification&gt;&gt; & 
-	  &lt;&lt;solution&gt;&gt;
-	    -->
-	  <a href="PL_Assignments/Other/archive/PL_WebWorkSite_Assignment.pdf">specification</a>
+	  <a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/sample_work_site/PL_Assignments/Other/archive/PL_WebWorkSite_Assignment.pdf">specification</a>
 	</li>
 	<li>Racket Programming Assignment #1: First Interactions: 
-	  <a href="PL_Assignments/Racket/archive/PL_Racket_Assignment_1.pdf">specification</a> & 
-	  <a href="PL_Assignments/Racket/archive/PL_Racket_Assignment_1_Model.pdf">solution</a>
+	  <a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/sample_work_site/PL_Assignments/Racket/archive/PL_Racket_Assignment_1.pdf">specification</a> & 
+	  <a href="https://drive.google.com/file/d/19ovMkT1sdO92XahI8FuxP4CC29Qr5YO8/view?usp=sharing">solution</a>
 	</li>
+	<li>Racket Programming Assignment #2: Racket Functions and Recursion: 
+		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Racket/archive/PL_Racket_Assignment_2.pdf">specification</a> & 
+		<a href="https://drive.google.com/file/d/1LuYhZomJLgW-h3KZ_LkvWZeYcEX4VFwA/view?usp=sharing">solution</a>
+	  </li>
 	<li> ...
 	</li>
 	  <!--	  
@@ -57,7 +55,7 @@
     </p>
   </div>
   
-  <div class="block">
+  <div class="section">
     <h2>Other Sites and Materials</h2>
     <p>
       <ul>
