--- a/website.html
+++ b/website.html
@@ -37,10 +37,18 @@
 		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Racket/archive/PL_Racket_Assignment_2.pdf">specification</a> & 
 		<a href="https://drive.google.com/file/d/1LuYhZomJLgW-h3KZ_LkvWZeYcEX4VFwA/view?usp=sharing">solution</a>
 	  </li>
-	  <li>Racket BNF Assignment: 
+	<li>Racket BNF Assignment: 
 		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Other/archive/PL_BNF_Assignment.pdf">specification</a> & 
 		<a href="https://drive.google.com/file/d/1Rm78jd66Muh2mcovx8qdx99vLkQZrbBj/view?usp=sharing">solution</a>
 	  </li>
+	<li>Racket Programming Assignment #3: Lambda and Basic Lisp: 
+		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Racket/archive/PL_Racket_Assignment_3.pdf">specification</a> & 
+		<a href="https://drive.google.com/file/d/1lZGr8qepr0bgjdQn4PBfrIfmsduDXDOU/view?usp=sharing">solution</a>
+	</li>
+	<li>Racket Programming Assignment #4: RLP and HoFs: 
+		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Racket/archive/PL_Racket_Assignment_4.pdf">specification</a> & 
+		<a href="https://drive.google.com/file/d/17F9ynq8nxciFk89ucZkRDML3Ojyqu-Xy/view?usp=sharing">solution</a>
+	</li>
 	<li> ...
 	</li>
 	  <!--	  
