--- a/website.html
+++ b/website.html
@@ -49,6 +49,10 @@
 		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Racket/archive/PL_Racket_Assignment_4.pdf">specification</a> & 
 		<a href="https://drive.google.com/file/d/17F9ynq8nxciFk89ucZkRDML3Ojyqu-Xy/view?usp=sharing">solution</a>
 	</li>
+	<li>Prolog Programming Assignment #1: Various Computation: 
+		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Prolog/PL_Prolog_Assignment_1.pdf">specification</a> & 
+		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Prolog/PL_Prolog_Assignment_1.pdf">solution</a>
+	</li>
 	<li> ...
 	</li>
 	  <!--	  
