--- a/website.html
+++ b/website.html
@@ -51,7 +51,7 @@
 	</li>
 	<li>Prolog Programming Assignment #1: Various Computation: 
 		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Prolog/PL_Prolog_Assignment_1.pdf">specification</a> & 
-		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Prolog/PL_Prolog_Assignment_1.pdf">solution</a>
+		<a href="https://drive.google.com/file/d/1WRnh4HZ9IHZZRtLtpFVGHsd1KRiA3cSv/view?usp=sharing">solution</a>
 	</li>
 	<li> ...
 	</li>
