--- a/website.html
+++ b/website.html
@@ -53,6 +53,16 @@
 		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Prolog/PL_Prolog_Assignment_1.pdf">specification</a> & 
 		<a href="https://drive.google.com/file/d/1WRnh4HZ9IHZZRtLtpFVGHsd1KRiA3cSv/view?usp=sharing">solution</a>
 	</li>
+	</li>
+	<li>Haskel Programming Assignment: Various Computation: 
+		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Haskell/PL_Haskell_Assignment.pdf">specification</a> & 
+		<a href="https://drive.google.com/file/d/1u9iWB3G6wPGOoa_nfHyKn8K2VM-k5ZsQ/view?usp=sharing">solution</a>
+	</li>
+	</li>
+	<li>Problem Set: Memory Management / Perspectives on Rust Assignment
+		<a href="https://www.cs.oswego.edu/~blue/course_pages/2022/Fall/Csc344/selected_course_documents/PL_Assignments/Other/archive/PL_Rust_MM_Assignment.pdf">specification</a> & 
+		<a href="https://drive.google.com/file/d/1NYRBYLhC7rEMvfKKv0zU2XCM35R7BE6V/view?usp=sharing">solution</a>
+	</li>
 	<li> ...
 	</li>
 	  <!--	  
